objects/Lead_Transition__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Lead Transitions</relationshipLabel>
        <relationshipName>Lead_Transitions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Lead Transitions</relationshipLabel>
        <relationshipName>Lead_Transitions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Edited_By__c</fullName>
        <label>Edited By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Lead Transitions</relationshipLabel>
        <relationshipName>Lead_Transitions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Modified_date__c</fullName>
        <label>Modified date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>New_value__c</fullName>
        <label>New value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Value__c</fullName>
        <label>Old Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Lead Transitions</relationshipLabel>
        <relationshipName>Lead_Transitions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SDR__c</fullName>
        <label>SDR</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Lead Transition</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Lead__c</columns>
        <columns>Old_Value__c</columns>
        <columns>New_value__c</columns>
        <columns>Edited_By__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>Transition-{000000}</displayFormat>
        <label>Lead Transition Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lead Transitions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>